# tableizer

./: .clang-format  .gitignore  AGENTS.md  CODING_STANDARDS.md  README.md  prompts.md  requirements.txt  todo.md
app/: .metadata  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/app/: MainActivity.kt  tableizer.kt
app/android/app/src/main/kotlin/com/wootrex/app/: MainActivity.kt
app/integration_test/: local_detection_test.dart
app/ios/: Podfile  pubspec.yaml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  tableizer_bindings.dart
app/lib/controllers/: ball_detection_controller.dart  camera_controller.dart  table_detection_controller.dart
app/lib/models/: ball_detection_result.dart  table_detection_result.dart
app/lib/native/: library_loader.dart
app/lib/screens/: ball_results_screen.dart  camera_screen.dart  display_picture_screen.dart  settings_screen.dart  table_results_screen.dart  table_screen.dart
app/lib/services/: ball_detection_service.dart  coordinate_transformer.dart  detection_isolate.dart  detection_service.dart  image_adapter.dart  settings_service.dart  table_detection_isolate.dart  table_detection_service.dart
app/lib/utils/: image_converter.dart
app/lib/widgets/: ball_painter.dart  box_painter.dart  bullseye_painter.dart  camera_preview_widget.dart  image_capture_overlay.dart  table_ball_painter.dart  table_painter.dart  util_widgets.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
data/hyps/: hyp.custom.yaml
lib/: CMakeLists.txt  build-android.sh  build-ios-device.sh  build-ios-sim.sh  build_app_lib.sh  build_ios.sh
lib/include/: ball_detector.hpp  base64_utils.hpp  quad_analysis.hpp  table_detector.hpp  tableizer.hpp  tableizer_ffi.h  utilities.hpp
lib/src/: ball_detection.cpp  ball_detection.hpp  ball_detector.cpp  base64_utils.cpp  ffi_api.cpp  ffi_api.hpp  image_processing.cpp  image_processing.hpp  json_parser.cpp  json_parser.hpp  main.cpp  quad_analysis.cpp  table_detector.cpp  tableizer.cpp  tableizer_ffi.cpp  utilities.cpp
lib/test/: CMakeLists.txt  Makefile  test_table_detection.cpp
python/: README.md  check_labels.py  compare_models.py  convert_model.py  detect_table.py  detect_transformed_table.py  model_table.py  tableizer_ffi.py  transform_dataset.py  utilities.py
